# slob_games

./: .gitignore  README.md  bidding.py  constants.py  dp_solver.py  game2x2.py  main.py  pyproject.toml  simulation.py  state.py  transitions.py  utilities.py
tests/: conftest.py  test_bidding.py  test_dp_solver.py  test_game2x2.py  test_transitions.py
